# ninshiki_cpp

./: .gitignore  CMakeLists.txt  README.md  package.xml
.github/workflows/: build-and-test-nightly.yml  build-and-test-stable.yml  build-and-test.yml  build-debian-nightly.yml  build-debian-stable.yml  build-ros2-ws-action.yml  ros-2-ci.yaml
config/: color_classifier.json
data/: color_classifier.json  grpc.json
include/ninshiki_cpp/: ninshiki_cpp.hpp
include/ninshiki_cpp/config/grpc/: call_data.hpp  call_data_base.hpp  call_data_get_color_setting.hpp  call_data_load_config.hpp  call_data_save_color_setting.hpp  call_data_set_color_setting.hpp  config.hpp
include/ninshiki_cpp/config/node/: config_node.hpp
include/ninshiki_cpp/config/utils/: config.hpp
include/ninshiki_cpp/detector/: color_detector.hpp  detector.hpp  dnn_detector.hpp  lbp_detector.hpp  yolo.hpp
include/ninshiki_cpp/node/: ninshiki_cpp_node.hpp
include/ninshiki_cpp/utils/: circle.hpp  circles.hpp  color.hpp  contours.hpp  rect.hpp  utils.hpp
install/: local_setup.sh  setup.sh
install/ninshiki_cpp/share/ninshiki_cpp/: package.bash  package.zsh
launch/: ninshiki_cpp_launch.py
log/: latest_build
src/: ninshiki_cpp_detector.cpp
src/ninshiki_cpp/config/grpc/: call_data_base.cpp  call_data_get_color_setting.cpp  call_data_load_config.cpp  call_data_save_color_setting.cpp  call_data_set_color_setting.cpp  config.cpp
src/ninshiki_cpp/config/node/: config_node.cpp
src/ninshiki_cpp/config/utils/: config.cpp
src/ninshiki_cpp/detector/: color_detector.cpp  detector.cpp  dnn_detector.cpp  lbp_detector.cpp  yolo.cpp
src/ninshiki_cpp/node/: ninshiki_cpp_node.cpp
src/ninshiki_cpp/utils/: circle.cpp  circles.cpp  color.cpp  contours.cpp  rect.cpp  utils.cpp
